--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Stats Notebooks
 description: >-
   A collection of Jupyter notebooks that demonstrate statistical concepts
-  along with Python code examples for data analysis and data science.
+  with Python code for data analysis and data science.
 github_username:  cian-ps
 
 # Build settings
